Refactor codebase for improved logging and resource management
- Updated resource bundle paths to use lowercase package names.
- Introduced SLF4J logging in multiple controllers and managers for better error handling.
- Replaced direct exception printing with logging statements.
- Enhanced connection management using HikariCP for better performance.
- Added dispose methods in controllers to clean up listeners.
- Improved UI responsiveness by using virtual threads for connection testing.
- Added help text for connection fields in the German language properties file.
- Created a logback configuration file for structured logging output.